Updated header name, updated sizing to that it is responsive

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,10 @@ body {
   position:fixed;
   bottom: 90px;
   right: 35px;
-  width: 850px;
+  /* width: 850px; Don't use px, it is fixed, use vw or vh for height*/
+  width: 90vw;
+  height: 85vh;
+  max-width: 850px;
   overflow: hidden;
   background: white;
   border-radius: 15px;
@@ -29,6 +32,14 @@ body {
   transform: scale(0.2);
   transform-origin: bottom right;
   transition: all 0.1s ease;
+}
+
+  /* When maximized we want it to fill the whole screen*/
+.chatbot-popup.maximized {
+  width: 100vw;
+  max-width: none;
+  height: 100vw;
+  max-height: none;
 }
 
 .chatbot-popup .chat-header {
@@ -81,8 +92,9 @@ body {
 }
 
 .chat-body {
-  height: 600px;
-  padding: 25px 25px;
+  /* height: 600px; moved to chat popup*/
+  /* padding: 25px 25px; use rem because it is responsive */
+  padding: 1.5rem;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -115,13 +127,11 @@ body {
   color: white;
 }
 
-
 .container.show-chatbot .chatbot-popup {
   opacity: 1;
   pointer-events: auto;
   transform: scale(1);
 }
-
 
 .chat-body .message {
   display: flex;
@@ -219,7 +229,6 @@ body {
 .chat-form .message-input:valid~button {
   display: block;
 }
-
 
 .chat-body .message.error .message-text{
   color: #ff0000;
